Fix fancybox image on mobile

--- a/client/src/components/css/onephoto.css
+++ b/client/src/components/css/onephoto.css
@@ -17,3 +17,11 @@
     position: relative;
     height: 500px;
 }
+
+@media (min-width: 300px) and (max-width: 550px) {
+    .onephoto img {
+        width: 90%;
+        position: relative;
+        height: 348px;
+    }
+}
